[wip] fetch all bugs

--- a/views/issueList.html
+++ b/views/issueList.html
@@ -15,7 +15,7 @@
         <div>
             <h1>Hi{{.ProjectTitle}} <small> world</small></h1>
         </div>
-        <a href="/issue/new">New issue</a>
+        <a href="/issue">New issue</a>
         <table class="table table-hover table-condensed">
             <thead>
                 <tr>
