--- a/views/newIssue.html
+++ b/views/newIssue.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="container">
-        <form action="/issue/new" method="post">
+        <form method="post" action="/issue/createissue">
             <div class="form-group">
                 <label>Title:</label>
                 <input id="issueTitle" name="issueTitle" type="text" class="form-control" placeholder="Issue Title">
