--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        {{template "header"}}
+        {{template "header" .}}
     </head>
 <body>
 
@@ -10,10 +10,14 @@
             {{template "navbar" .}}
         </div>
     </div>
-
+    
     <p>
         <h1>Hello world</h1>
-        {{if .IsLogin}} had login {{else}} Anonymous {{end}}
+        {{if .IsLogin}} 
+            had login 
+        {{else}} 
+            Anonymous 
+        {{end}}
     </p>
 
     
