[wip] issue list page

--- a/views/issue.html
+++ b/views/issue.html
@@ -30,7 +30,7 @@
             </div>
 
             {{range .issueHTMLValue}}
-                {{template "issueFormCreate" .}}
+                {{template "issueCreate" .}}
             {{end}}
 
             <!-- 分割线 -->
