--- a/views/issueList.html
+++ b/views/issueList.html
@@ -19,8 +19,9 @@
         <table class="table table-hover table-condensed">
             <thead>
                 <tr>
+                    <th></th>
                     <th>#</th>
-                    <th>Description</th>
+                    <th style="width: 30%">Title</th>
                     <th>Status</th>
                     <th>Priority</th>
                     <th>Version</th>
@@ -30,36 +31,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                    <td>value</td>
-                </tr>
+                {{template "issueListTableRow" .}}
             </tbody>
         </table>
     </div>
