[update] issue list feature

--- a/views/issueList.html
+++ b/views/issueList.html
@@ -15,7 +15,14 @@
         <div>
             <h1>Hi{{.ProjectTitle}} <small> world</small></h1>
         </div>
+
         <a href="/issue">New issue</a>
+
+        <!-- 分割线 -->
+        <div style="height:1px">
+            <hr class="seperate-line" width="80%" color=#987cb9 SIZE=3>
+        </div>
+
         <table class="table table-hover table-condensed">
             <thead>
                 <tr>
