--- a/static/css/FFTechStyle/issueDetail.css
+++ b/static/css/FFTechStyle/issueDetail.css
@@ -2,6 +2,10 @@
     width: 15%;
 }
 
+.textfield {
+    width: 100%;
+}
+
 textarea {
     width: 100%;
 }
@@ -33,12 +37,34 @@ textarea {
     grid-row: 2;
 }
 
-.five {
-    grid-column: 2;
-    grid-row: 4;
+.grid-col-1 {
+    grid-column: 1;
 }
 
-.six {
-    grid-column: 3;
-    grid-row: 4;
+.grid-col-23 {
+    grid-column: 2/3;
+}
+
+.grid-col-45 {
+    grid-column: 4/5;
+}
+
+.grid-col-67 {
+    grid-column: 6/7;
+}
+
+.grid-row-1 {
+    grid-row: 1;
+}
+
+.grid-row-2 {
+    grid-row: 1;
+}
+
+.grid-row-3 {
+    grid-row: 1;
+}
+
+.grid-row-4 {
+    grid-row: 1;
 }
