--- a/views/issueDetail.html
+++ b/views/issueDetail.html
@@ -4,6 +4,8 @@
 <head>
     {{template "header" .}}
     <link rel="stylesheet" href="/static/css/FFTechStyle/issueDetail.css">
+    <link rel="stylesheet" href="/static/css/FFTechStyle/issueList.css">
+    <link rel="stylesheet" href="/static/js/features/issue.js">
 </head>
 
 <body>
@@ -18,22 +20,37 @@
 
     <div class="container">
         <form role="form" method="POST" action="#">
+            <div>
+                <h1>Issue: <small><a href="#">#{{$issue.ID}} {{$issue.Title}}</a></small></h1>
+            </div>
+
+            <div class="issue-level-{{$issue.Priority}}" style="width:100%;height:0.5em;margin-top:1em;margin-bottom:0.5em;"></div>
+
             <div class="form-group">
-                <h1>Issue: <small>{{$issue.Title}}</small></h1>
+                {{range .issueHTMLValue}}
+                {{template "dataPickerTemplate" .}}
+                {{end}}
             </div>
-            <div class="form-group" >
+
+            {{template "seperate-line"}}
+
+            <div>
                 <label class="left" style="width:100%">Description:</label>
-                <textarea cols="30" rows="10" readonly="readonly">{{$issue.Description}}</textarea>
+                <p style="margin-left:5em;width:100%;max-height:20em;" class="scroll">{{$issue.Description}}</p>
             </div>
 
-            {{range .issueHTMLValue}}
-            {{template "dataPickerTemplate" .}}
-            {{end}}
+            {{template "seperate-line"}}
 
-            <!-- 分割线 -->
-            <div class="col-xs-12">
-                <hr class="seperate-line" width="80%" color=#987cb9 SIZE=3>
+            <!-- 提交区 -->
+            <div class="form-group">
+                <label>New Comment:</label>
+                <textarea name="issue_comment" id="issue_comment" cols="30" rows="10" placeholder="Write new comment here."></textarea>
+                <input style="margin-top:1em;" type="button" class="btn btn-default" value="Submit">
             </div>
+
+            {{template "seperate-line"}}
+
+            <!-- 历史记录区 -->
 
         </form>
     </div>
