[updata] refactor the db model

--- a/views/issueDetail.html
+++ b/views/issueDetail.html
@@ -5,7 +5,7 @@
     {{template "header" .}}
     <link rel="stylesheet" href="/static/css/FFTechStyle/issueDetail.css">
     <link rel="stylesheet" href="/static/css/FFTechStyle/issueList.css">
-    <link rel="stylesheet" href="/static/js/features/issue.js">
+    <script type="text/javascript" src="/static/js/features/issue.js"></script>
 </head>
 
 <body>
