--- a/views/issue.html
+++ b/views/issue.html
@@ -21,12 +21,12 @@
         <form role="form" method="post" action="/issue/create">
             <div class="form-group">
                 <label>Title: *</label>
-                <input id="picker-Title" name="picker-Title" type="text" class="form-control" placeholder="Issue Title">
+                <input id="Title" name="Title" type="text" class="form-control" placeholder="Issue Title">
             </div>
 
             <div class="form-group">
                 <label>Description: *</label>
-                <textarea id="picker-Description" name="picker-Description" class="form-control" placeholder="Please input the description here." rows="10"></textarea>
+                <textarea id="Description" name="Description" class="form-control" placeholder="Please input the description here." rows="10"></textarea>
             </div>
 
             {{range .issueHTMLValue}}
