--- a/views/issueDetail.html
+++ b/views/issueDetail.html
@@ -20,21 +20,25 @@
     {{$issue := .issueData}}
 
     <div class="container">
-        <form role="form" method="POST" action="/issuedetail/{{$issue.ID}}/newlog">
-            <div>
-                <h1>Issue: <small><a href="#">#{{$issue.ID}} {{$issue.Title}}</a></small></h1>
-            </div>
+        <div>
+            <h1>Issue: <small><a href="#">#{{$issue.ID}} {{$issue.Title}}</a></small></h1>
+        </div>
 
-            <div class="issue-level-{{$issue.Priority}}" style="width:100%;height:0.5em;margin-top:1em;margin-bottom:0.5em;"></div>
+        <div class="issue-level-{{$issue.Priority}}" style="width:100%;height:0.5em;margin-top:1em;margin-bottom:0.5em;"></div>
 
+        <form id="frmIssueUpdate" method="POST" action="#" onsubmit="return false">
             <div class="form-group">
                 {{range .issueHTMLValue}}
                 {{template "dataPickerTemplate" .}}
                 {{end}}
             </div>
 
-            {{template "seperate-line"}}
+        </form>
 
+        {{template "seperate-line"}}
+
+        <form id="frmIssueDetail" method="POST" action="#" onsubmit="return false">
+            
             <div>
                 <label class="left" style="width:100%">Description:</label>
                 <p style="margin-left:5em;width:100%;max-height:20em;" class="scroll">{{$issue.Description}}</p>
@@ -45,22 +49,22 @@
             <!-- 提交区 -->
             <div class="form-group">
                 <label>New Comment:</label>
-                <textarea name="issue_comment" id="issue_comment" cols="30" rows="10" placeholder="Write new comment here."></textarea>
-                <input style="margin-top:1em;" type="submit" class="btn btn-default" value="Submit" onclick="return issueDetailSubmitNewLog();">
+                <textarea name="Description" id="Description" cols="30" rows="10" placeholder="Write new comment here."></textarea>
+                <input style="margin-top:1em;" type="submit" class="btn btn-default" value="Submit" onclick="issueDetailSubmitNewLog('{{$issue.ID}}')">
             </div>
 
             {{template "seperate-line"}}
 
-            <!-- 历史记录区 -->
-            <div>
-                <label>Comment history:</label>
-
-                {{range $index, $log := .issueLogHistory}}
-                <p>{{$index}} - {{$log}}</p>
-                {{end}}
-            </div>
-
         </form>
+
+        <!-- 历史记录区 -->
+        <div>
+            <label>Comment history:</label>
+
+            {{range $index, $log := .issueLogHistory}}
+            <p>{{$index}} - {{$log}}</p>
+            {{end}}
+        </div>
     </div>
 
 </body>
