--- a/views/login.html
+++ b/views/login.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         {{template "header"}}
+        <script src="/static/js/features/login.js"></script>
     </head>
 <body>
 
@@ -12,7 +13,7 @@
     </div>
 
     <div class="container" style="width:30em">
-        <form method="POST" action="/login/signin">
+        <form id="frmLogin" method="POST" action="#" onsubmit="return false">
             <div class="form-group">
                 <label>Account</label>
                 <input type="text" name="email" class="form-control" placeholder="Email" id="email">
@@ -24,8 +25,8 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" class="btn btn-default" onclick="return checkInput();" value="Sign in">
-                <script type="text/javascript" >
+                <input type="submit" class="btn btn-default" onclick="login()" value="Sign in">
+                <!-- <script type="text/javascript" >
                     function checkInput() 
                     {
                         if (checkInputLength('email', 1, 1024) == false) {
@@ -46,7 +47,7 @@
                             return false;
                         }
                     }                    
-                </script>
+                </script> -->
             </div>
         </form>
     </div>
