--- a/views/register.html
+++ b/views/register.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         {{template "header"}}
+        <script src="/static/js/features/register.js"></script>
     </head>
 <body>
 
@@ -12,7 +13,7 @@
     </div>
 
     <div class="container" style="width:30em">
-        <form method="POST" action="/register">
+        <form id="frmRegister" method="POST" action="#" onsubmit="return false">
             <div class="form-group">
                 <label>Account: *</label>
                 <input type="text" name="email" class="form-control" placeholder="Email" id="email">
@@ -29,8 +30,8 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" class="btn btn-default" onclick="return checkInput();" value="Register">
-                <script type="text/javascript">
+                <input type="submit" class="btn btn-default" onclick="regiseter()" value="Register">
+                <!-- <script type="text/javascript">
                     function checkInput() 
                     {
                         if (checkInputLength('email', 1, 1024) == false) {
@@ -51,7 +52,7 @@
                             return false;
                         }
                     }  
-                </script>
+                </script> -->
             </div>
         </form>
     </div>
