--- a/views/issueList.html
+++ b/views/issueList.html
@@ -3,6 +3,7 @@
     <head>
         {{template "header"}}
         <link rel="stylesheet" href="/static/css/FFTechStyle/issueList.css" type="text/css">
+        <script type="text/javascript" src="/static/js/features/issueList.js"></script>
     </head>
 <body>
 
