--- a/views/issueDetail.html
+++ b/views/issueDetail.html
@@ -27,24 +27,23 @@
         <div class="issue-level-{{$issue.Priority}}" style="width:100%;height:0.5em;margin-top:1em;margin-bottom:0.5em;"></div>
 
         <form id="frmIssueUpdate" method="POST" action="#" onsubmit="return false">
-            <div class="form-group">
-                {{range .issueHTMLValue}}
-                {{template "dataPickerTemplate" .}}
-                {{end}}
-            </div>
-
+            <!-- <div class="form-group"> -->
+            {{range .issueHTMLValue}}
+            {{template "dataPickerTemplate" .}}
+            {{end}}
+            <!-- </div> -->
         </form>
 
         {{template "seperate-line"}}
 
-        <form id="frmIssueDetail" method="POST" action="#" onsubmit="return false">
-            
-            <div>
-                <label class="left" style="width:100%">Description:</label>
-                <p style="margin-left:5em;width:100%;max-height:20em;" class="scroll">{{$issue.Description}}</p>
-            </div>
+        <div>
+            <label class="left" style="width:100%">Description:</label>
+            <p style="margin-left:5em;width:100%;max-height:20em;" class="scroll">{{$issue.Description}}</p>
+        </div>
 
-            {{template "seperate-line"}}
+        {{template "seperate-line"}}
+
+        <form id="frmIssueDetail" method="POST" action="#" onsubmit="return false">
 
             <!-- 提交区 -->
             <div class="form-group">
@@ -53,9 +52,9 @@
                 <input style="margin-top:1em;" type="submit" class="btn btn-default" value="Submit" onclick="issueDetailSubmitNewLog('{{$issue.ID}}')">
             </div>
 
-            {{template "seperate-line"}}
-
         </form>
+
+        {{template "seperate-line"}}
 
         <!-- 历史记录区 -->
         <div>
