--- a/views/demo_upload.html
+++ b/views/demo_upload.html
@@ -12,6 +12,20 @@
 
 <body>
     <div class="container">
+
+        <!-- <div style="margin-bottom:20px;display: flex;display: -webkit-flex; align-items: center">
+            <label>上传图片：</label><input type="file" name="elemUpload" id="elemUpload"><button type="submit" class="btn btn-primary" conclick="onUploadFile()">添加</button>
+        </div> -->
+
+        <div class="col-5 f-l text text-r">背景图(必须):</div>
+        <form id="fform" action="/upload" method="post" enctype="multipart/form-data">
+            <input id="myfile" name="myfile" type="file" />
+            <input type="submit" value="保存" />
+        </form>
+
+        <div class="img-file col-offset-5">
+        </div>
+
         <!--创建text文件-->
         <div style="width:100%;height:50px;">
             <button onclick="createtxt()" class="btn btn-primary">创建text文件</button>
@@ -36,6 +50,25 @@
 
     <!--JS部分-->
     <script type="text/javascript">
+
+        // $(function () {
+        //     $('#uploadFile').click(function () {
+        //         formData = new FormData($('#uploadForm')[0]);
+        //         $.ajax({
+        //             type: 'post',
+        //             url: '/upload',
+        //             data: formData,
+        //             cache: false,
+        //             processData: false,
+        //             contentType: 'multipart/form-data; boundary=----WebKitFormBoundaryZpsWTsOiRHI0TBW7',
+        //         }).success(function (result) {
+        //             alert(result);
+        //         }).error(function (result) {
+        //             alert("上传错误");
+        //         });
+        //     });
+        // });
+
         //创建text文件
         function createtxt() {
             $.ajax({
