--- a/views/weatherDemo.html
+++ b/views/weatherDemo.html
@@ -4,6 +4,25 @@
 <head>
     {{template "header" .}}
     <link href="/static/css/weather/weatherAnim.css" type="text/css" rel="stylesheet">
+
+    <script type="text/javascript">
+        function weatherClick() {
+            $.ajax({
+                dataType: 'json',
+                url: '/weather',
+                method: 'post',
+                success: function(result) {
+                    if (result.Code == 302 || result.Code == 200) {
+                        window.location.href = result.URL
+                    }
+                    alert('success:' + result);
+                },
+                error: function(result) {
+                    alert('error:' + result);
+                }
+            })
+        }
+    </script>
 </head>
 
 <body>
@@ -54,6 +73,9 @@
         <p>Based on <a href="https://dribbble.com/shots/2097042-Widget-Weather" target="_blank">Dribbble</a> by kylor</p>
     </div>
 
+    <form action="/weather" method="post">
+        <input type="button" value="click me" onclick="weatherClick()">
+    </form>
     
 
 </body>
