--- a/static/css/FFTechStyle/issueDetail.css
+++ b/static/css/FFTechStyle/issueDetail.css
@@ -1,4 +1,22 @@
-.section-title {
+.avatar-4px {
+    border-radius: 4px;
+}
+
+.table-condensed2 > thead > tr > th,
+.table-condensed2 > tbody > tr > th,
+.table-condensed2 > tfoot > tr > th,
+.table-condensed2 > thead > tr > td,
+.table-condensed2 > tbody > tr > td,
+.table-condensed2 > tfoot > tr > td {
+    padding: 1px 3px;
+}
+
+tr,td .bugnote .bugnote-note { background-color:#fff; color: #000000; width: 75%; vertical-align: top; }
+.bugnote-private { background-color: #fcf8e3 !important;}
+
+tr.spacer   { background-color: #ffffff !important; color: #000000; height: 10px; }
+
+/* .section-title {
     width: 15%;
 }
 
@@ -67,4 +85,4 @@ textarea {
 
 .grid-row-4 {
     grid-row: 1;
-}
+} */
