--- a/static/css/FFTechStyle/issueDetail.css
+++ b/static/css/FFTechStyle/issueDetail.css
@@ -1,89 +1,71 @@
-.avatar-4px {
-    border-radius: 4px;
-    margin: 6px;
+table,
+tr,
+th,
+td {
+	border: 0px;
 }
 
-.table-condensed2 > thead > tr > th,
-.table-condensed2 > tbody > tr > th,
-.table-condensed2 > tfoot > tr > th,
-.table-condensed2 > thead > tr > td,
-.table-condensed2 > tbody > tr > td,
-.table-condensed2 > tfoot > tr > td {
-    padding: 1px 3px;
+table > tbody > tr > td,
+table > tbody > tr > th,
+table > tfoot > tr > td,
+table > tfoot > tr > th,
+table > thead > tr > td,
+table > thead > tr > th {
+    padding: 5px;
 }
 
-tr,td .bugnote .bugnote-note { background-color:#fff; color: #000000; width: 75%; vertical-align: top; }
-.bugnote-private { background-color: #fcf8e3 !important;}
-
-tr.spacer   { background-color: #ffffff !important; color: #000000; height: 10px; }
-
-/* .section-title {
-    width: 15%;
+th.log-thead {
+	text-align: left;
+	width: 300px;
 }
 
-.textfield {
+th.log-tdetail {
+	text-align: left; 
+	width: 75%;
+}
+
+.table {
+    border-top: 1px solid #e5e5e5;
+    margin-bottom: 0px;
+    border-width: 0px;
+}
+
+.table-body-log-history {
+    margin-left: 3em;
     width: 100%;
 }
 
-textarea {
-    width: 100%;
+.log-brief-secion {
+    background-color: #edf3f4;
 }
 
-.wrapper {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 10px;
-    grid-auto-rows: minmax(2rem, auto);
+.log-detail-section {
+    background-color: #e8e8e8;
 }
 
-.one {
-    grid-column: 1;
-    grid-row: 1;
+.align-top {
+    vertical-align: top;
 }
 
-.two {
-    grid-column: 2 / 7;
-    grid-row: 1;
+.log-user-icon {
+	float: left;
+    background-color: transparent;
 }
 
-.three {
-    grid-column: 1;
-    grid-row: 2;
+.log-avatar {
+	margin: 4px 4px 4px 4px;
+    border-radius: 48px;
+    width: 48px;
+    height: 48px;
+    
 }
 
-.four {
-    grid-column: 2 / 7;
-    grid-row: 2;
+.log-user-info {
+	margin: 4px 4px 4px 4px;
+	float: left;
+}
+.log-user-info > div > p {
+	margin: 0px 4px 4px 4px;
 }
 
-.grid-col-1 {
-    grid-column: 1;
-}
 
-.grid-col-23 {
-    grid-column: 2/3;
-}
-
-.grid-col-45 {
-    grid-column: 4/5;
-}
-
-.grid-col-67 {
-    grid-column: 6/7;
-}
-
-.grid-row-1 {
-    grid-row: 1;
-}
-
-.grid-row-2 {
-    grid-row: 1;
-}
-
-.grid-row-3 {
-    grid-row: 1;
-}
-
-.grid-row-4 {
-    grid-row: 1;
-} */
