--- a/views/issueDetail.html
+++ b/views/issueDetail.html
@@ -3,11 +3,17 @@
 
 <head>
     {{template "header" .}}
+
+    <!-- markdown editor -->
+    <link rel="stylesheet" type="text/css" href="/static/simplemde/dist/simplemde.min.css">
+    <script type="text/javascript" src="/static/simplemde/dist/simplemde.min.js"></script>
+
     <link rel="stylesheet" href="/static/css/FFTechStyle/issueDetail.css">
     <link rel="stylesheet" href="/static/css/FFTechStyle/issueLevel.css">
     <script type="text/javascript" src="/static/js/avatar/avatar.js"></script>
     <script type="text/javascript" src="/static/js/features/issue.js"></script>
     <script type="text/javascript" src="/static/js/features/issueDetail.js"></script>
+
 </head>
 
 <body>
@@ -54,6 +60,12 @@
                 <input style="margin-top:1em;" type="submit" class="btn btn-default" value="Submit" onclick="issueDetailSubmitNewLog('{{$issue.ID}}')">
             </div>
 
+            <script>
+                $('#issue_comment').ready(function(){
+                    initMarkdownEditorInstance();
+                });
+            </script>
+
         </form>
 
         {{template "seperate-line"}}
@@ -92,7 +104,12 @@
                             {{if eq $log.Type 1}}
                             <p>Issue status {{$log.StatusTitle}} had been changed from {{BugStatusWithType $log.PrvStatus}} into {{BugStatusWithType $log.NewStatus}}</p>
                             {{else}}
-                            <p>{{$log.Content}}</p>
+                            <div id="issue_comment_{{$index}}"></div>
+                            <script>
+                                $('#issue_comment').ready(function(){
+                                    document.getElementById("issue_comment_{{$index}}").innerHTML = convertMDtoHtml('{{$log.Content}}');
+                                });
+                            </script>
                             {{end}}
 
                             <script type="text/javascript">
